cb-policy.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: event-service-cb
  namespace: recsys-prod
spec:
  host: event-service.recsys-prod.svc.cluster.local
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
    outlierDetection:
      consecutive5xxErrors: 1
      interval: 1s
      baseEjectionTime: 3m
      maxEjectionPercent: 100
